style.css
/* Full-sized desktop stylesheet */
html {
	background-image: url("images/rock_texture.jpg");
	background-size: 1920px 1080px ;
}

header {
	display: flex;
	flex-direction:column;
	align-items: center;
	justify-content: center;
	position:relative;
}

header hr {
	width: 100%;
	color:orange;
}

nav {
	display: flex;
	width: 100%;
	align-items: center;
	justify-content: center;
	background-color: rgba(100, 100, 100, 0.67);
	border: 2px solid darkgrey;
}

nav:hover {
	border-color: aliceblue;
}

nav.minimized {
	display: flex;
	visibility: visible;
	margin-bottom:40px;
}

nav p {
	width: 25%;
	text-align:center;
	margin: 0px;
	padding: 20px;
	font-size: 24px;
	color: orange;
}

nav p:hover {
	background-color: lightcyan;
	font-weight: bold;
	text-decoration: underline;
}

.navdropdown {
	width:75%;
	display: none;
	align-self: start;
	align-items: start;
	justify-content: center;
	background-color: rgb(169,169,169,0.67);
	margin-bottom: 15px;
	visibility: hidden;
	border: 5px solid aliceblue;
	border-top:0px;
}

#navdropdown.visible {
	display: table;
}

.navdropdown .column {
	margin: 0px;
	padding: 20px;
	display: table-cell;
	height: auto;
}

.navdropdown .column:hover {
	background-color: aliceblue;
}

.navdropdown hr {
	color:grey;
	display:none;
}

.navlabel {
	display:none;
	visibility: hidden;
	font-weight: bold;
}

#controlbar {
	width: 100%;
	display:flex;
	justify-content: space-between;
}

#navmenu {
	width:100px;
	height:100px;
	margin: 20px;
	//align-self: flex-start;
	border: 3px solid white;
	border-radius: 10px;
	display:none;
	visibility:hidden;
}

#contactbutton {
	width:100px;
	height:100px;
	margin: 20px;
	//align-self: flex-end;
	border: 3px solid white;
	border-radius: 10px;
	display:none;
	visibility:hidden;
}

.contactpopup {
	width: calc(100% - 50px);
	display: none;
	align-self: center;
	align-items: center;
	margin-top: -30px;
	margin-bottom: 45px;
	justify-content: center;
	background-color: grey;
	visibility: hidden;
	position: relative;
	border: 3px dashed orange;
	border-radius: 10px;
	z-index:10;
}

.contactpopup.visible {
	display:block;
}

#contactpopup p {
	width: 100%;
	margin: 20px;
}

.contactcard {
	display:flex;
	justify-content:flex-start;
	align-items:center;
	margin: 5px;
	border: 3px solid darkgrey;
	border-radius: 5px;
}

.contacticon {
	margin: 15px;
	width: 50px;
	height: 50px;
	border: 2px solid aliceblue;
}

.contactcard p {
	margin: 10px;
	align-self:end;
}

.speechBubble {
	z-index:initial;
}

.pointerdiv {
	background-color: darkgrey;
	margin: auto;
	transform: translate(-25px,25px) rotate(45deg) ;
	align-self: center;
	height: 50px;
	width: 50px;
	position: relative;
	z-index:-1;
	border-right:3px dashed orange;
	border-bottom:3px dashed orange;
}

.visible {
	display: flex;
	visibility: visible;
}

.column {
	width: 33%;
	padding-left: 20px;
	padding-right: 20px;
}

.column a {
	padding-left: 20px;
	padding-right: 20px;
}


main {
	width:100%;
	display: flex;
	flex-direction: row;
	align-items: flex-start;
	justify-content: flex-start;
}

main.wrapperFrame {
}

.banner {
	border-radius: 15px;
	object-fit: cover;
	margin: 10px;
	height: 200px;
	width: calc(100% - 20px);
	order:0
}

#mainbanner {
	position:fixed;
}

#wrapper {
	border: 3px solid orange;
	border-radius: 30px;
	width: 75%;
	margin: 20px;
	order:1;
	align-self: start;
}

.scrollBox {
	height: 650px;
	margin: 20px;
	overflow-y:scroll;
	border: 3px solid lightcyan;
	border-radius: 7px;
}

.scrollBox section {
	border-radius: 7px;
}

.minimized {
	order:2;
	display:none;
	visibility: hidden;
}

#bio {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	max-width: 35%;
	order:1;
	margin: auto;
	margin-top: 40px;
}

#bio.minimized {
	width:25%;
	display: flex;
	visibility: visible;
}

#bio section {
	border-color:lightcyan;
	margin: 20px;
}

section {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	border: solid;
	border-width: 2px;
	border-radius: 15px;
	border-color: lightgrey;
	background-color: rgba(100, 100, 100, 0.5);
	margin: 20px;
	padding: 20px;
}
 
section p {
	width: 80%;
}
 
footer {
	display: flex;
	align-items: center;
	justify-content: center;
}

h1 {
	margin: 50px;
	padding: 30px;
	font-size: 48px;
	text-align: center;
	font-family: 'Palatino', serif;
	font-style: italic;
	color: aliceblue;
	border: 5px solid orange;
	border-radius: 15px;
}

h1:hover {
	color: lightcyan;
}

h2 {
	color: lightcyan;
	font-family: 'Helvetica', sans-serif;
	font-size: 30px;
	font-weight: bold;
}

.subtitle {
	display:flex;
	width: 100%;
	justify-content:center;
	align-items:center;
}

.subtitle p {
	text-align:center;
	font-size: 20px;
	font-family: 'Palatino', serif;
	font-style: italic;
	font-weight: bold;
	color: aliceblue;
}

p {
	width: 100%;
	color: white;
	font-family: 'Helvetica', sans-serif;
}

a {
	font-weight:bold;
	color: orange;
}

a:hover {
	color: cornflowerblue;
}

li {
	color: lightgrey;
	font-family: 'Helvetica', sans-serif;
}

iframe {
	width: 720px;
	height: 480px;
}

.galleryItem {
	width: 720px;
	height: 480px;
}

.headshot {
	border-radius: 100%;
	border: 3px solid orange;
	margin: 10px;
}



/* Windowed mode and tablet stylesheet */
@media only screen and (max-width: 1100px) {
	html {
		background-image: url('images/rock_texture.jpg');
		background-size: 960px 540px ;
	}
	
	section {
		padding: 30px; 
	}
	
	h1 {
		font-size: 40px;
	}
	
	h2 {
		font-size: 34px;
		font-weight: heavy;
	}
	
	.subtitle p {
		font-size: 18px;
		padding: 10px;
	}
	
	nav, nav.minimized {
		visibility: hidden;
		display: none;
	}
	

	main.wrapperFrame {
		flex-direction: column;
	}
	
	#wrapper {
		width: calc(100% - 40px);
	}
	
	.scrollBox {
		height:1200px;
	}
	
	#bio {
		min-width:100%;
	}
	
	#bio.minimized {
		min-width:100%;
	}
	
	.navdropdown {
		margin: 20px;
		width:calc(100% - 40px);
		flex-direction: column;
		border:3px solid aliceblue;
		border-radius: 7px;	
	}
	
	#navdropdown .column {
		display: block;
		height: auto;
		width: auto;
	}
	
	.navdropdown hr {
		color:grey;
		display:block;
	}
	
	a {
		font-size: 24px;
	}

	p {
		font-size: 24px;
		font-weight: bold;
	}
	
	section p {
		width: 90%;
	}
	
	.navlabel {
		font-size: 24px;
		display:block;
		visibility:visible;
	}
	
	#navdropdown .column:hover .navlabel {
		color:grey;
	}


	#navmenu {
		visibility: visible;
		display: block;
	}
	
	#contactbutton {
		visibility: visible;
		display: block;
	}
	
	iframe {
		width:480px;
		height:380px;
		max-width: calc(100% - 40px)
	}
	
	.galleryItem {
		width:480px;
		height:380px;
		max-width: calc(100% - 40px)
	}
	
}

/* Single-column and mobile stylesheet */
@media only screen and (max-width: 800px) {
	section {
		flex-direction: column;
	}
	
	section {
		padding: 15px; 
	}
	
	h1 {
		font-size: 30px;
	}
	
	h2 {
		font-size: 26px;
	}
	
	.subtitle {
		display:none;
	}
	
	.headshot {
		margin: auto;
		margin-bottom: 30px;
	}
	
	iframe {
		max-width:480px;
		max-height:380px;
		min-width:380px;
		min-height:240px;
	}
	
	.galleryItem {
		max-width:480px;
		max-height:380px;
		min-width:380px;
		min-height:240px;
	}
}

